Master inventory and purchase order
Master inventory and purchase order

--- a/WebManagementApp/appsettings.json
+++ b/WebManagementApp/appsettings.json
@@ -18,6 +18,10 @@
     "Greenwize",
     "AVA Supplies"
   ],
+  "ReferralFee": {
+    "ReferralFee1": 0.15,
+    "ReferralFee2": 0.08
+  },
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "AEScopeSecretKey",
